2008-07-22  Allan Saddi  <allan@saddi.com>

	* Release 1.0.1

	* Attempt to deduce missing PATH_INFO and/or QUERY_STRING from
	  REQUEST_URI, if present. Patch provided by Richard Davies.

2007-09-10  Allan Saddi  <allan@saddi.com>

	* Fix readline implementations so size argument is checked
	  earlier.

2007-07-14  Allan Saddi  <allan@saddi.com>

	* Prevent ThreadPool inconsistences if an exception is
	  actually raised. Thanks to Tim Chen for the patch.

2007-06-05  Allan Saddi  <allan@saddi.com>

	* Remove publisher and middleware packages.
	* Add cgi server for completeness.

2007-05-17  Allan Saddi  <allan@saddi.com>

	* Fix fcgi_fork so it can run on Solaris. Thanks to
	  Basil Crow for the patch.

2007-01-22  Allan Saddi  <allan@saddi.com>

	* Fix eunuchs import issue.

2007-01-10  Allan Saddi  <allan@saddi.com>

	* Support gzip compression of XHTML pages using the
	  correct MIME type.

2006-12-29  Allan Saddi  <allan@saddi.com>

	* Deprecate WSGI_SCRIPT_NAME and scriptName in scgi_base.
	  Modern versions of mod_scgi correctly set SCRIPT_NAME &
	  PATH_INFO.

2006-12-13  Allan Saddi  <allan@saddi.com>

	* Fix problem in session.py seen when optimization is on.

2006-12-05  Allan Saddi  <allan@saddi.com>

	* Update servers to default to an empty QUERY_STRING if
	  not present in the environ.
	* Update gzip.py: compresslevel -> compress_level
	* Update gzip.py by updating docstrings and renaming
	  classes/methods/functions to better follow Python naming
	  conventions. NB: mimeTypes keyword parameter is now
	  mime_types.

2006-12-02  Allan Saddi  <allan@saddi.com>

	* Change intra-package imports into absolute imports.

2006-12-02  Allan Saddi  <allan@saddi.com>

	* Add forceCookieOutput attribute to SessionService to
	  force Set-Cookie output for the current request.

2006-12-01  Allan Saddi  <allan@saddi.com>

	* Update setup script.

2006-11-26  Allan Saddi  <allan@saddi.com>

	* Don't attempt to install signal handlers under Windows